fix: item alignment styles

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,14 @@
   margin: 0;
 }
 
+html{
+  background: #e0e2e6;
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
+
 }
 
 .body-container {
