--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,12 +1,13 @@
 .Home > section {
-  width: 90%;
+  width: 80%;
   margin: auto;
   margin-top: 2rem;
-
   display: flex;
-  gap: 3rem;
+  row-gap: 3rem;
+  column-gap: 2rem;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 3rem;
 }
 
 .Home > section span {
